--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,14 @@
     <string name="_10">10</string>
     <string name="_11">11</string>
     <string name="team_name">Takım adı</string>
+    <string name="save_game">OYUNU KAYDET</string>
+    <string name="tag">Tag</string>
+    <string name="total">Toplam</string>
+    <string name="team1">Takım 1</string>
+    <string name="team1Name">Takım 1 Adı</string>
+    <string name="team1TotalScore">Toplam Skor: 0</string>
+    <string name="team2">Takım 2</string>
+    <string name="team2Name">Takım 2 Adı</string>
+    <string name="team2TotalScore">Toplam Skor: 0</string>
+    <string name="date">Tarih</string>
 </resources>
