--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,19 @@
     <string name="score">Skor</string>
     <string name="my_game_history">Geçmiş oyunlarım</string>
     <string name="total_0">Toplam: 0</string>
+    <string name="round_11">Tur 11</string>
+    <string name="round_9">Tur 9</string>
+    <string name="round_10">Tur 10</string>
+    <string name="round_8">Tur 8</string>
+    <string name="round_7">Tur 7</string>
+    <string name="round_6">Tur 6</string>
+    <string name="round_5">Tur 5</string>
+    <string name="round_4">Tur 4</string>
+    <string name="round_3">Tur 3</string>
+    <string name="round_2">Tur 2</string>
+    <string name="round_1">Tur 1</string>
+    <string name="round_scores">Tur Skorları</string>
+    <string name="total_scores">Toplam Skorlar</string>
+    <string name="record_not_found">Kayıt bulunamadı</string>
+    <string name="toolbar_save_game">Oyun kayıt</string>
 </resources>
