Kayıtlı oyunları görüntüleme ekranında, kayıt ekranının tasarımında ve kodlarında değişiklik yapıldı

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="difference_0">Fark: 0</string>
     <string name="save">Kaydet</string>
     <string name="todo">TODO</string>
+    <string name="_0">0</string>
+    <string name="game_info">Oyun bilgi</string>
 </resources>
