--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="todo">TODO</string>
     <string name="_0">0</string>
     <string name="game_info">Oyun bilgi</string>
+    <string name="game_detail">Oyun detay</string>
 </resources>
