Oyun detay ekranında verileri göstermek için verilere göre layout oluşturan kodlar yazıldı ve tasarımda bazı değişiklikler yapıldı

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="_0">0</string>
     <string name="game_info">Oyun bilgi</string>
     <string name="game_detail">Oyun detay</string>
+    <string name="teamNames">Takım İsimleri</string>
+    <string name="detail">Detay</string>
 </resources>
