Tekli ve eşli oyunları göstermek için bir fragment oluşturuldu. İçerisinde Viewpager oluşturuldu fragmentlar eklendi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,8 @@
     <string name="detail">Detay</string>
     <string name="partner">Eşli</string>
     <string name="single">Tekli</string>
+    <string-array name="tablayoutTitleArray">
+        <item>Tekli oyunlarım</item>
+        <item>Eşli oyunlarım</item>
+    </string-array>
 </resources>
