--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,10 @@
     <string name="enter_team1_name">1. takım için isim giriniz</string>
     <string name="enter_team2_name">2. takım için isim giriniz</string>
     <string name="team_round_scores">Takım Tur Skorları</string>
+    <string name="player1_name">1. oyuncu adı</string>
+    <string name="player2_name">2. takım adı</string>
+    <string name="player3_name">3. takım adı</string>
+    <string name="player4_name">4. oyuncu adı</string>
     <string-array name="tablayoutTitleArray">
         <item>Tekli oyunlarım</item>
         <item>Eşli oyunlarım</item>
