--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">OkeyScore</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="team_name">Takım adı</string>
     <string name="save_game">OYUNU KAYDET</string>
@@ -13,7 +12,7 @@
     <string name="team2Name">2. Takım adı </string>
     <string name="team2TotalScore">Toplam Skor: 0</string>
     <string name="date">Tarih</string>
-    <string name="score">Skor</string>
+    <string name="score">Toplam skor: 1000</string>
     <string name="my_game_history">Geçmiş oyunlarım</string>
     <string name="total_0">Toplam: 0</string>
     <string name="round_11">Tur 11</string>
@@ -59,7 +58,7 @@
     <string name="_120">120</string>
     <string name="playerNamesAndScoresTitle">Oyuncu İsimleri ve Toplam Skorları</string>
     <string name="teamNamesAndScoresTitle">Takım İsimleri ve Toplam Skorları</string>
-
+    <string name="total_score_text">Toplam skor: %1$s</string>
     <string name="teamScoresTitle">Oyuncu Tur Skorları</string>
     <string name="enter_team1_name">1. takım için isim giriniz</string>
     <string name="enter_team2_name">2. takım için isim giriniz</string>
@@ -68,6 +67,8 @@
     <string name="player2_name">2. takım adı</string>
     <string name="player3_name">3. takım adı</string>
     <string name="player4_name">4. oyuncu adı</string>
+    <string name="teams">Takımlar</string>
+    <string name="players">Oyuncular</string>
     <string-array name="tablayoutTitleArray">
         <item>Tekli oyunlarım</item>
         <item>Eşli oyunlarım</item>
