--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OkeyScore</string>
+    <string name="app_name">101 Okey Yazboz</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="team_name">Takım adı</string>
     <string name="save_game">OYUNU KAYDET</string>
