Arama ile ilgili buglar düzeltilti ve logo düzenlemeleri yapıldı

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="players">Oyuncular</string>
     <string name="partner_game">Eşli Oyun Kayıt</string>
     <string name="single_game">Tekli Oyun Kayıt</string>
+    <string name="successful">Başarılı</string>
     <string-array name="tablayoutTitleArray">
         <item>Tekli oyunlarım</item>
         <item>Eşli oyunlarım</item>
