Hatalar ve uyarılar düzeltildi kullanılmayan öğeler silindi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,61 +1,24 @@
 <resources>
     <string name="app_name">101 Okey Yazboz</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="team_name">Takım adı</string>
-    <string name="save_game">OYUNU KAYDET</string>
     <string name="tag">Tag</string>
-    <string name="total">Toplam</string>
-    <string name="team1">Takım 1</string>
-    <string name="team1Name">1. Takım adı</string>
-    <string name="team1TotalScore">Toplam Skor: 0</string>
-    <string name="team2">Takım 2</string>
-    <string name="team2Name">2. Takım adı </string>
-    <string name="team2TotalScore">Toplam Skor: 0</string>
     <string name="date">Tarih</string>
-    <string name="score">Toplam skor: 1000</string>
-    <string name="my_game_history">Geçmiş oyunlarım</string>
-    <string name="total_0">Toplam: 0</string>
-    <string name="round_11">Tur 11</string>
-    <string name="round_10">Tur 10</string>
-    <string name="round_9">Tur 9</string>
-    <string name="round_8">Tur 8</string>
-    <string name="round_7">Tur 7</string>
-    <string name="round_6">Tur 6</string>
-    <string name="round_5">Tur 5</string>
-    <string name="round_4">Tur 4</string>
-    <string name="round_3">Tur 3</string>
-    <string name="round_2">Tur 2</string>
-    <string name="round_1">Tur 1</string>
     <string name="round_scores">Tur Skorları</string>
-    <string name="total_scores">Toplam Skorlar</string>
     <string name="record_not_found">Kayıt bulunamadı</string>
-    <string name="toolbar_save_game">Oyun kayıt</string>
-    <string name="difference_0">Fark: 0</string>
     <string name="save">Kaydet</string>
     <string name="todo">TODO</string>
-    <string name="_0">0</string>
     <string name="game_info">Oyun bilgi</string>
     <string name="game_detail">Oyun detay</string>
-    <string name="teamNames">Takım İsimleri</string>
     <string name="detail">Detay</string>
     <string name="partner">Eşli</string>
     <string name="single">Tekli</string>
-    <string name="player_1">Oyuncu 1</string>
-    <string name="player_2">Oyuncu 2</string>
-    <string name="player_3">Oyuncu 3</string>
-    <string name="player_4">Oyuncu 4</string>
     <string name="enter_player1_name">1. oyuncu için isim giriniz</string>
     <string name="enter_player2_name">2. oyuncu için isim giriniz</string>
     <string name="enter_player3_name">3. oyuncu için isim giriniz</string>
     <string name="enter_player4_name">4. oyuncu için isim giriniz</string>
     <string name="new_round">Yeni Tur</string>
     <string name="save_names">İsimleri Kaydet</string>
-    <string name="player_name">Oyuncu adı</string>
     <string name="total_score">Toplam skor</string>
-    <string name="game_info_okey">Oyun Bilgisi: Okey</string>
-    <string name="date_info">Oyun Tarihi: 30 Kasım 2023</string>
     <string name="player">Player</string>
-    <string name="_120">120</string>
     <string name="playerNamesAndScoresTitle">Oyuncu İsimleri ve Toplam Skorları</string>
     <string name="teamNamesAndScoresTitle">Takım İsimleri ve Toplam Skorları</string>
     <string name="total_score_text">Toplam skor: %1$s</string>
@@ -63,15 +26,12 @@
     <string name="enter_team1_name">1. takım için isim giriniz</string>
     <string name="enter_team2_name">2. takım için isim giriniz</string>
     <string name="team_round_scores">Takım Tur Skorları</string>
-    <string name="player1_name">1. oyuncu adı</string>
-    <string name="player2_name">2. takım adı</string>
-    <string name="player3_name">3. takım adı</string>
-    <string name="player4_name">4. oyuncu adı</string>
     <string name="teams">Takımlar</string>
     <string name="players">Oyuncular</string>
     <string name="partner_game">Eşli Oyun Kayıt</string>
     <string name="single_game">Tekli Oyun Kayıt</string>
     <string name="successful">Başarılı</string>
+    <string name="show_differences">Farkları gör</string>
     <string-array name="tablayoutTitleArray">
         <item>Tekli oyunlarım</item>
         <item>Eşli oyunlarım</item>
