--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="tag">Tag</string>
     <string name="date">Tarih</string>
     <string name="round_scores">Tur Skorları</string>
-    <string name="record_not_found">Kayıt bulunamadı</string>
+    <string name="record_not_found">Kayıt oluşturmak için \"Yeni Kayıt\" butonuna tıklayınız</string>
     <string name="save">Kaydet</string>
     <string name="todo">TODO</string>
     <string name="game_info">Oyun bilgi</string>
@@ -36,4 +36,8 @@
         <item>Tekli oyunlarım</item>
         <item>Eşli oyunlarım</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="new_game_record">Yeni Kayıt</string>
+    <string name="history">Geçmiş</string>
 </resources>
