--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,6 @@
     <string name="game_info">Oyun bilgi</string>
     <string name="game_detail">Oyun detay</string>
     <string name="detail">Detay</string>
-    <string name="partner">Eşli</string>
-    <string name="single">Tekli</string>
     <string name="enter_player1_name">1. oyuncu için isim giriniz</string>
     <string name="enter_player2_name">2. oyuncu için isim giriniz</string>
     <string name="enter_player3_name">3. oyuncu için isim giriniz</string>
@@ -36,8 +34,7 @@
         <item>Tekli oyunlarım</item>
         <item>Eşli oyunlarım</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_game_record">Yeni Kayıt</string>
     <string name="history">Geçmiş</string>
+    <string name="skip">Atla</string>
 </resources>
