--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,9 @@
     <string name="new_game_record">Yeni Kayıt</string>
     <string name="history">Geçmiş</string>
     <string name="skip">Atla</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dark_mode">Koyu mod</string>
+    <string name="settings">AYARLAR</string>
+    <string name="language">Dil</string>
 </resources>
