--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,7 +3,7 @@
     <string name="tag">Tag</string>
     <string name="date">Date</string>
     <string name="round_scores">Round Scores</string>
-    <string name="record_not_found">Kayıt oluşturmak için \"Yeni Kayıt\" butonuna tıklayınız</string>
+    <string name="record_not_found">Click on \"New Registration\" button to create a record</string>
     <string name="save">Save</string>
     <string name="todo">TODO</string>
     <string name="game_info">Game info</string>
@@ -38,10 +38,20 @@
     <string name="history">History</string>
     <string name="skip">Skip</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dark_mode">Dark mode</string>
-    <string name="settings">SETTINGS</string>
+    <string name="settings">Settings</string>
     <string name="language">Language</string>
-
+    <string name="select_language">Select language</string>
+    <string name="turkish">Turkish</string>
+    <string name="english">English</string>
+    <string name="search_team_hint">Type a date or team name to search</string>
+    <string name="search_player_hint">Type a date or player name to search</string>
+    <string name="confirmation_title">Transaction Confirmation</string>
+    <string name="confirmation_message">Do you want to record the game?</string>
+    <string name="confirmation_yes">Yes</string>
+    <string name="confirmation_no">No</string>
+    <string name="warning_enter_all_player_names">Please enter all player names.</string>
+    <string name="warning_enter_all_team_names">Please enter all team names.</string>
+    <string name="registration_successful">Registration successful</string>
 
 </resources>
