Eşli oyuncuların veritabanına ceza ekleme işlemleri ve toplam skora etki işlemleri tamamlandı

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -69,4 +69,12 @@
     <string name="single_player_2">Single Player 2</string>
     <string name="single_player_3">Single Player 3</string>
     <string name="single_player_4">Single Player 4</string>
+    <string name="penaltyText" >Penalty: %d</string>
+    <string name="confirm">Confirm</string>
+    <string name="determine_punishment">Select the player to punish</string>
+    <string name="select_team_punish" >Select the team to punish</string>
+    <string name="select_player_punish">Determine the Punishment</string>
+    <string name="forward">Forward</string>
+
+
 </resources>
