--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -52,6 +52,7 @@
     <string name="warning_check_all_rounds">Please %d. fill in all fields in the round.</string>
     <string name="warning_enter_all_player_names">Please enter all player names.</string>
     <string name="warning_enter_all_team_names">Please enter all team names.</string>
+    <string name="enter_different_names">Please enter different names.</string>
     <string name="registration_successful">Registration successful</string>
     <string name="round_count">Round %d</string>
     <string name="score_difference">%s and %s score difference: %d</string>
@@ -69,7 +70,8 @@
     <string name="single_player_2">Single Player 2</string>
     <string name="single_player_3">Single Player 3</string>
     <string name="single_player_4">Single Player 4</string>
-    <string name="penaltyText" >Penalty: %d</string>
+    <string name="penalty_text" >Penalty: </string>
+    <string name="penalty_text_value" >Penalty: %d</string>
     <string name="confirm">Confirm</string>
     <string name="determine_punishment">Select the player to punish</string>
     <string name="select_team_punish" >Select the team to punish</string>
